--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,18 +8,22 @@ services:
     depends_on:
       - zookeeper
       - kafka
-      - "schema-registry"
+      - schema-registry
     environment:
       - WORKER_PORT=8066
-      - KAFKA_BOOTSTRAP_SERVER=kafka://kafka:9092
-      - KAFKA_BOOSTRAP_SERVER_NAME=kafka
+      - KAFKA_BOOTSTRAP_SERVER=kafka://172.18.0.3:9092
+      - KAFKA_BOOSTRAP_SERVER_NAME=172.18.0.3
       - KAFKA_BOOSTRAP_SERVER_PORT=9092
-      - SCHEMA_REGISTRY_URL=http://schema-registry:8081
-      - SCHEMA_REGISTRY_SERVER=schema-registry
+      - SCHEMA_REGISTRY_URL=http://172.18.0.4:8081
+      - SCHEMA_REGISTRY_SERVER=172.18.0.4
       - SCHEMA_REGISTRY_SERVER_PORT=8081
     ports:
       - "8084:80"
       - "8000:8000"
+    extra_hosts:
+      - "kafka:172.18.0.3"
+      - "schema-registry:172.18.0.4"
+      - "zookeeper:172.18.0.2"
   zookeeper:
     image: "confluentinc/cp-zookeeper"
     hostname: zookeeper
